[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GameSelectionRect.gd" type="Script" id=2]
[ext_resource path="res://Title.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 120
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="ImageTexture" id=2]

[sub_resource type="DynamicFont" id=3]
size = 56
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 60
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 1, 1, 0, 0.25098 )

[sub_resource type="GradientTexture2D" id=5]
gradient = SubResource( 4 )
width = 480
height = 600

[node name="Title" type="Node"]
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorBackground" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="TitleLabel" type="Label" parent="."]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.2
margin_top = -100.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "Good Luck! :D"
align = 1
valign = 1

[node name="GameSelection" type="Control" parent="."]
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 0.6

[node name="Easy" type="Control" parent="GameSelection"]
anchor_left = 0.2
anchor_right = 0.2
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 300.0
__meta__ = {
"_editor_description_": ""
}

[node name="TextureRect" type="TextureRect" parent="GameSelection/Easy"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -100.0
texture = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="GameSelection/Easy/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.486275, 0.733333, 0.262745, 1 )

[node name="DifficultyLabel" type="Label" parent="GameSelection/Easy"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
custom_fonts/font = SubResource( 3 )
text = "Easy"
align = 1
valign = 1

[node name="Highscore" type="Label" parent="GameSelection/Easy"]
anchor_top = 0.33
anchor_right = 1.0
anchor_bottom = 0.333
margin_top = -45.0
margin_bottom = 113.5
custom_fonts/font = SubResource( 6 )
text = "Highscore
0"
align = 1
valign = 1

[node name="Normal" type="Control" parent="GameSelection"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 300.0
__meta__ = {
"_editor_description_": ""
}

[node name="TextureRect" type="TextureRect" parent="GameSelection/Normal"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -100.0
texture = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="GameSelection/Normal/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.835294, 0.709804, 0.219608, 1 )

[node name="DifficultyLabel" type="Label" parent="GameSelection/Normal"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
custom_fonts/font = SubResource( 3 )
text = "Normal"
align = 1
valign = 1

[node name="Highscore" type="Label" parent="GameSelection/Normal"]
anchor_top = 0.33
anchor_right = 1.0
anchor_bottom = 0.333
margin_top = -45.0
margin_bottom = 113.5
custom_fonts/font = SubResource( 6 )
text = "Highscore
0"
align = 1
valign = 1

[node name="Hard" type="Control" parent="GameSelection"]
anchor_left = 0.8
anchor_right = 0.8
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 300.0
__meta__ = {
"_editor_description_": ""
}

[node name="TextureRect" type="TextureRect" parent="GameSelection/Hard"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -100.0
texture = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="GameSelection/Hard/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.707031, 0.199111, 0.115997, 1 )

[node name="DifficultyLabel" type="Label" parent="GameSelection/Hard"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
custom_fonts/font = SubResource( 3 )
text = "Hard"
align = 1
valign = 1

[node name="Highscore" type="Label" parent="GameSelection/Hard"]
anchor_top = 0.33
anchor_right = 1.0
anchor_bottom = 0.333
margin_top = -45.0
margin_bottom = 113.5
custom_fonts/font = SubResource( 6 )
text = "Highscore
0"
align = 1
valign = 1

[node name="GameSelectionRect" type="ReferenceRect" parent="GameSelection"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -1450.0
margin_top = -240.0
margin_right = -970.0
margin_bottom = 360.0
border_color = Color( 1, 1, 0, 0.25098 )
border_width = 10.0
editor_only = false
script = ExtResource( 2 )

[node name="GameSelectionTimer" type="Timer" parent="GameSelection/GameSelectionRect"]
wait_time = 3.0
one_shot = true

[node name="GameSelectionProgress" type="TextureProgress" parent="GameSelection/GameSelectionRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_progress = SubResource( 5 )
fill_mode = 3

[node name="SelectionSFX" type="AudioStreamPlayer" parent="GameSelection/GameSelectionRect"]

[node name="BGM" type="AudioStreamPlayer" parent="."]
autoplay = true
